move button slightly to the left to ensure outline is not cut off with overflow:hidden;

--- a/app/assets/stylesheets/pages/settings.scss
+++ b/app/assets/stylesheets/pages/settings.scss
@@ -42,7 +42,7 @@
   button {
     position: absolute;
     top: 20px;
-    right: 0;
+    right: 6px;
     min-width: 80px;
   }
 }
